<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	android:id="@+id/ticket_root"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/colorPrimaryDark"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:elevation="4dp"
			android:minHeight="?attr/actionBarSize"
			android:theme="@style/AppTheme.AppBarOverlay"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>
	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:padding="16dp">

			<android.support.design.widget.TextInputLayout
				android:id="@+id/report_im_in_danger"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<android.support.design.widget.TextInputEditText
					android:id="@+id/new_request_address"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:hint="@string/new_request_address_hint"
					android:minLines="3"/>
			</android.support.design.widget.TextInputLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/request_new_type"
				android:textColor="@color/colorAccent"/>

			<Spinner
				android:id="@+id/new_request_type"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:entries="@array/request_type"
				android:minHeight="48dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/request_new_conditions"
				android:textColor="@color/colorAccent"/>

			<CheckBox
				android:id="@+id/new_request_condition_door"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:minHeight="48dp"
				android:text="@string/request_new_condition_door"/>

			<CheckBox
				android:id="@+id/new_request_condition_stairs"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:minHeight="48dp"
				android:text="@string/request_new_condition_stairs"/>

			<Button
				android:id="@+id/new_request_send"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:text="@string/request_new_condition_send"/>
		</LinearLayout>
	</android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
